--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-  <title>[WebStandards template]</title>
+  <title>[Plain and Minimalistic WebStandards template]</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="images/png" href="images/favicon.png">
 </head>
 
 <body>
-  <h1>hello plain web standards</h1>
+  <h1>hello plain web standards (PWS)</h1>
   <script src="app.js"></script>
 </body>
 </html>
