--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 
 <body>
   <h1>hello plain web standards (PWS)</h1>
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
 </body>
 </html>
